--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jsan": "^3.1.5",
+    "@types/node": "^20.14.2",
     "expo": "~50.0.17",
     "expo-module-scripts": "^3.4.2",
     "patch-package": "^8.0.0",
